k8s/linode-k8s-example.yaml
# https://www.linode.com/docs/guides/how-to-configure-load-balancing-with-tls-encryption-on-a-kubernetes-cluster/
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: ts-conversionserver-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ts-conversionserver-app
  labels:
    app: ts-conversionserver-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ts-conversionserver-app
  template:
    metadata:
      labels:
        app: ts-conversionserver-app
      namespace: ts-conversionserver-ns
    spec:
      containers:
      - name: conversionserver
        image: townsuite/conversionserver:latest
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /status
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 10
        startupProbe:
          httpGet:
            path: /status
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /status
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 10
        securityContext:
          allowPrivilegeEscalation: false
      securityContext:
        runAsNonRoot: true
      #imagePullSecrets:
      #- name: [Your Secrets Name]
---
apiVersion: v1
kind: Service
metadata:
  name: ts-conversionserver-service
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: ts-conversionserver-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ts-conversionserver-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - [Add your url here]
    secretName: letsencrypt-secret-prod
  rules:
  - host: [Add your url here]
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ts-conversionserver-service
            port:
              number: 80
